--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer Portfolio</title>
+    <title>Bhavya's Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Navigation -->
     <header>
         <nav>
-            <div class="logo">MyPortfolio</div>
+            <div class="logo">BhavyaPortfolio</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -26,15 +26,15 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Hi, I'm John Doe</h1>
-        <p>Full Stack Developer | JavaScript | React | Node.js</p>
+        <h1>Hi, I'm Bhavya</h1>
+        <p>B.Tech 3rd Year Student | Aspiring Frontend Developer</p>
         <a href="#projects" class="btn">View My Work</a>
     </section>
 
     <!-- About Section -->
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>I am a passionate developer with experience in building responsive and user-friendly web applications. I enjoy turning ideas into reality using code.</p>
+        <p>Hello! I'm Bhavya, a B.Tech 3rd-year student with a passion for frontend development. My goal is to build interactive, responsive, and user-friendly web applications. I enjoy creating projects that combine creativity with clean, efficient code.</p>
     </section>
 
     <!-- Projects Section -->
@@ -42,18 +42,18 @@
         <h2>My Projects</h2>
         <div class="project-grid">
             <div class="project-card">
-                <h3>Project One</h3>
-                <p>A responsive web app built with HTML, CSS, and JavaScript.</p>
+                <h3>Portfolio Website</h3>
+                <p>A personal portfolio to showcase my projects and skills using HTML, CSS, and JavaScript.</p>
                 <a href="#" target="_blank">View Project</a>
             </div>
             <div class="project-card">
-                <h3>Project Two</h3>
-                <p>A React-based project with interactive UI components.</p>
+                <h3>To-Do App</h3>
+                <p>An interactive to-do app built with JavaScript to manage daily tasks efficiently.</p>
                 <a href="#" target="_blank">View Project</a>
             </div>
             <div class="project-card">
-                <h3>Project Three</h3>
-                <p>Node.js backend API with Express and MongoDB integration.</p>
+                <h3>React Weather App</h3>
+                <p>A weather application built using React.js and fetch API to display live weather data.</p>
                 <a href="#" target="_blank">View Project</a>
             </div>
         </div>
@@ -62,7 +62,7 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Email: johndoe@example.com</p>
+        <p>Email: bhavya@example.com</p>
         <p>Phone: +123 456 7890</p>
         <form>
             <input type="text" placeholder="Your Name" required>
@@ -74,7 +74,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 John Doe. All rights reserved.</p>
+        <p>&copy; 2025 Bhavya. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
