--- a/index.html
+++ b/index.html
@@ -34,13 +34,18 @@
     <!-- About Section -->
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>Hello! I'm Bhavya, a B.Tech 3rd-year student with a passion for frontend development. My goal is to build interactive, responsive, and user-friendly web applications. I enjoy creating projects that combine creativity with clean, efficient code.</p>
+        <p>Hello! I'm Bhavya, a B.Tech 3rd-year student passionate about frontend development. I love designing interactive and responsive web applications that provide a great user experience. My goal is to become a professional frontend developer, mastering HTML, CSS, JavaScript, and React. I enjoy learning new technologies and building projects that showcase my skills. I am constantly experimenting and improving my coding abilities. I also love collaborating on projects and contributing to open-source. This portfolio highlights some of the projects I've built so far.</p>
     </section>
 
     <!-- Projects Section -->
     <section id="projects" class="projects">
         <h2>My Projects</h2>
         <div class="project-grid">
+            <div class="project-card">
+                <h3>Realtime Chat App</h3>
+                <p>A realtime chat application built with HTML, CSS, JavaScript, and Firebase. Users can join chat rooms and send messages instantly.</p>
+                <a href="https://bhavyamalla3.github.io/realtime-chat/" target="_blank">View Project</a>
+            </div>
             <div class="project-card">
                 <h3>Portfolio Website</h3>
                 <p>A personal portfolio to showcase my projects and skills using HTML, CSS, and JavaScript.</p>
