--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="burger">
@@ -31,7 +32,7 @@
         <a href="#projects" class="btn">View My Work</a>
     </section>
 
-    <!-- About Section -->
+    <!-- About Me Section -->
     <section id="about" class="about">
         <h2>About Me</h2>
         <p>Hello! I'm Bhavya, a B.Tech 3rd-year student passionate about frontend development. I love designing interactive and responsive web applications that provide a great user experience. My goal is to become a professional frontend developer, mastering HTML, CSS, JavaScript, and React. I enjoy learning new technologies and building projects that showcase my skills. I am constantly experimenting and improving my coding abilities. I also love collaborating on projects and contributing to open-source. This portfolio highlights some of the projects I've built so far.</p>
@@ -60,6 +61,35 @@
                 <h3>React Weather App</h3>
                 <p>A weather application built using React.js and fetch API to display live weather data.</p>
                 <a href="#" target="_blank">View Project</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills" class="skills">
+        <h2>My Skills</h2>
+        <div class="skill">
+            <h3>HTML</h3>
+            <div class="skill-bar">
+                <div class="skill-level html"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <h3>CSS</h3>
+            <div class="skill-bar">
+                <div class="skill-level css"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <h3>JavaScript</h3>
+            <div class="skill-bar">
+                <div class="skill-level js"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <h3>React</h3>
+            <div class="skill-bar">
+                <div class="skill-level react"></div>
             </div>
         </div>
     </section>
