--- a/index.html
+++ b/index.html
@@ -5,100 +5,53 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bhavya's Portfolio</title>
 <link rel="stylesheet" href="style.css">
-<!-- Font Awesome for skill icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
-<!-- Welcome Screen -->
+<!-- Welcome Menu -->
 <section id="welcome" class="welcome-screen">
     <div class="welcome-content">
-        <h1>Welcome ❤️</h1>
-        <p>Hi, I'm Bhavya</p>
-        <div class="welcome-buttons">
-            <button onclick="scrollToSection('about')">About</button>
-            <button onclick="scrollToSection('projects')">Projects</button>
-            <button onclick="scrollToSection('skills')">Skills</button>
-            <button onclick="scrollToSection('contact')">Contact</button>
+        <h1>Welcome</h1>
+        <p>Select where you want to go:</p>
+        <div class="menu-buttons">
+            <button onclick="showSection('about')">❤️ About</button>
+            <button onclick="showSection('projects')">⚡ Projects</button>
+            <button onclick="showSection('skills')">🛡️ Skills</button>
+            <button onclick="showSection('contact')">✉️ Contact</button>
         </div>
     </div>
 </section>
 
-<!-- Navigation -->
-<header>
-    <nav>
-        <div class="logo">BhavyaPortfolio</div>
-        <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-        <div class="burger">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </nav>
-</header>
-
-<!-- About Section -->
+<!-- Sections (hidden initially) -->
 <section id="about" class="section">
     <h2>About Me</h2>
-    <p>Hello! I'm Bhavya, a B.Tech 3rd-year student passionate about frontend development. I love designing interactive and responsive web applications that provide a great user experience. My goal is to become a professional frontend developer, mastering HTML, CSS, JavaScript, and React. I enjoy learning new technologies and building projects that showcase my skills. I am constantly experimenting and improving my coding abilities. I also love collaborating on projects and contributing to open-source. This portfolio highlights some of the projects I've built so far.</p>
+    <p>Hello! I'm Bhavya, a B.Tech 3rd-year student passionate about frontend development. I enjoy building interactive and responsive web applications...</p>
+    <button onclick="backToWelcome()">Back</button>
 </section>
 
-<!-- Projects Section -->
 <section id="projects" class="section">
     <h2>Projects</h2>
-    <div class="project-grid">
-        <div class="project-card">
-            <h3>Realtime Chat App</h3>
-            <p>A realtime chat application built with HTML, CSS, JavaScript, and Firebase. Users can join chat rooms and send messages instantly.</p>
-            <a href="https://bhavyamalla3.github.io/realtime-chat/" target="_blank">View Project</a>
-        </div>
-        <div class="project-card">
-            <h3>Portfolio Website</h3>
-            <p>A personal portfolio to showcase my projects and skills using HTML, CSS, and JavaScript.</p>
-            <a href="#" target="_blank">View Project</a>
-        </div>
-        <div class="project-card">
-            <h3>To-Do App</h3>
-            <p>An interactive to-do app built with JavaScript to manage daily tasks efficiently.</p>
-            <a href="#" target="_blank">View Project</a>
-        </div>
-        <div class="project-card">
-            <h3>React Weather App</h3>
-            <p>A weather application built using React.js and fetch API to display live weather data.</p>
-            <a href="#" target="_blank">View Project</a>
-        </div>
+    <div class="project-card">
+        <h3>Realtime Chat App</h3>
+        <p>A realtime chat application built with HTML, CSS, JS, Firebase.</p>
+        <a href="https://bhavyamalla3.github.io/realtime-chat/" target="_blank">View Project</a>
     </div>
+    <button onclick="backToWelcome()">Back</button>
 </section>
 
-<!-- Skills Section -->
-<section id="skills" class="section skills">
+<section id="skills" class="section">
     <h2>Skills</h2>
-    <div class="skill">
-        <h3><i class="fab fa-html5"></i> HTML</h3>
-        <div class="skill-bar"><div class="skill-level html"></div></div>
-    </div>
-    <div class="skill">
-        <h3><i class="fab fa-css3-alt"></i> CSS</h3>
-        <div class="skill-bar"><div class="skill-level css"></div></div>
-    </div>
-    <div class="skill">
-        <h3><i class="fab fa-js-square"></i> JavaScript</h3>
-        <div class="skill-bar"><div class="skill-level js"></div></div>
-    </div>
-    <div class="skill">
-        <h3><i class="fab fa-react"></i> React</h3>
-        <div class="skill-bar"><div class="skill-level react"></div></div>
-    </div>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>React</li>
+    </ul>
+    <button onclick="backToWelcome()">Back</button>
 </section>
 
-<!-- Contact Section -->
-<section id="contact" class="section contact">
-    <h2>Contact Me</h2>
+<section id="contact" class="section">
+    <h2>Contact</h2>
     <p>Email: bhavya@example.com</p>
     <p>Phone: +123 456 7890</p>
     <form>
@@ -107,12 +60,8 @@
         <textarea placeholder="Your Message" required></textarea>
         <button type="submit">Send Message</button>
     </form>
+    <button onclick="backToWelcome()">Back</button>
 </section>
-
-<!-- Footer -->
-<footer>
-    <p>&copy; 2025 Bhavya. All rights reserved.</p>
-</footer>
 
 <script src="script.js"></script>
 </body>
