--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Welcome ❤️</h1>
         <p>Hi, I'm Bhavya! Choose where you want to go:</p>
         <div class="menu-buttons">
-            <button onclick="showSection('about')">❤️ About</button>
+            <button onclick="showSection('about')"> About</button>
             <button onclick="showSection('projects')">⚡ Projects</button>
             <button onclick="showSection('skills')">🛡️ Skills</button>
             <button onclick="showSection('contact')">✉️ Contact</button>
