--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <p>Hi, I'm Bhavya! Choose where you want to go:</p>
         <div class="menu-buttons">
             <button onclick="showSection('about')"> About</button>
-            <button onclick="showSection('projects')">⚡ Projects</button>
-            <button onclick="showSection('skills')">🛡️ Skills</button>
-            <button onclick="showSection('contact')">✉️ Contact</button>
+            <button onclick="showSection('projects')"> Projects</button>
+            <button onclick="showSection('skills')"> Skills</button>
+            <button onclick="showSection('contact')">Contact</button>
         </div>
     </div>
 </section>
@@ -111,12 +111,32 @@
 <!-- Skills Section -->
 <section id="skills" class="section">
     <h2>Skills</h2>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>React</li>
-    </ul>
+    <div class="skills-container">
+        <div class="skill">
+            <p>HTML</p>
+            <div class="progress"><div class="progress-bar" style="width:95%;">95%</div></div>
+        </div>
+        <div class="skill">
+            <p>CSS</p>
+            <div class="progress"><div class="progress-bar" style="width:90%;">90%</div></div>
+        </div>
+        <div class="skill">
+            <p>JavaScript</p>
+            <div class="progress"><div class="progress-bar" style="width:80%;">80%</div></div>
+        </div>
+        <div class="skill">
+            <p>Database</p>
+            <div class="progress"><div class="progress-bar" style="width:70%;">70%</div></div>
+        </div>
+        <div class="skill">
+            <p>Node.js</p>
+            <div class="progress"><div class="progress-bar" style="width:65%;">65%</div></div>
+        </div>
+        <div class="skill">
+            <p>React</p>
+            <div class="progress"><div class="progress-bar" style="width:75%;">75%</div></div>
+        </div>
+    </div>
     <button onclick="backToWelcome()">Back</button>
 </section>
 
