--- a/index.html
+++ b/index.html
@@ -8,15 +8,25 @@
 </head>
 <body>
 
+<!-- Top Navigation Bar -->
+<nav id="top-nav">
+    <ul>
+        <li><button onclick="showSection('about')">About</button></li>
+        <li><button onclick="showSection('projects')">Projects</button></li>
+        <li><button onclick="showSection('skills')">Skills</button></li>
+        <li><button onclick="showSection('contact')">Contact</button></li>
+    </ul>
+</nav>
+
 <!-- Welcome Screen -->
 <section id="welcome" class="welcome-screen">
     <div class="welcome-content">
         <h1>Welcome ❤️</h1>
-        <p>Hi, I'm Bhavya! Choose where you want to go:</p>
+        <p>Hi, I'm Bhavya!:</p>
         <div class="menu-buttons">
             <button onclick="showSection('about')">About</button>
             <button onclick="showSection('projects')">Projects</button>
-            <button onclick="showSection('skills')"> Skills</button>
+            <button onclick="showSection('skills')">Skills</button>
             <button onclick="showSection('contact')">Contact</button>
         </div>
     </div>
@@ -43,44 +53,36 @@
         are practical, creative, and useful for real-world problems.</p>
     </div>
 
-    <!-- Current Projects Grid -->
     <div class="projects-grid">
         <div class="project-card">
             <h3>Realtime Chat App</h3>
             <p>A realtime chat application built with HTML, CSS, JavaScript, and Firebase.</p>
-            <a href="https://bhavyamalla3.github.io/realtime-chat/" target="_blank">View Project</a>
+            <iframe src="https://bhavyamalla3.github.io/realtime-chat/" width="100%" height="300px" style="border:1px solid #ddd; border-radius:8px;"></iframe>
+            <a href="https://bhavyamalla3.github.io/realtime-chat/" target="_blank">Open in Fullscreen</a>
         </div>
 
         <div class="project-card">
-            <h3>Portfolio Website</h3>
-            <p>A personal portfolio website to showcase my projects and skills.</p>
-            <a href="#" target="_blank">View Project</a>
-        </div>
-
-        <div class="project-card">
-            <h3>To-Do App</h3>
-            <p>An interactive To-Do list app to manage daily tasks.</p>
-            <a href="#" target="_blank">View Project</a>
+            <h3>Personal Portfolio</h3>
+            <p>My personal portfolio website showcasing my projects, skills, and contact information.</p>
+            <iframe src="https://bhavyamalla3.github.io/Personal-Portfolio/" width="100%" height="300px" style="border:1px solid #ddd; border-radius:8px;"></iframe>
+            <a href="https://bhavyamalla3.github.io/Personal-Portfolio/" target="_blank">Open in Fullscreen</a>
         </div>
 
         <div class="project-card">
             <h3>Interactive Quiz</h3>
             <p>A fun and interactive quiz application built with HTML, CSS, and JavaScript.</p>
-            <iframe src="https://bhavyamalla3.github.io/interactive-quiz-application/" 
-                    width="100%" height="300px" style="border:1px solid #ddd; border-radius:8px;"></iframe>
+            <iframe src="https://bhavyamalla3.github.io/interactive-quiz-application/" width="100%" height="300px" style="border:1px solid #ddd; border-radius:8px;"></iframe>
             <a href="https://bhavyamalla3.github.io/interactive-quiz-application/" target="_blank">Open in Fullscreen</a>
         </div>
 
         <div class="project-card">
             <h3>Registration Form</h3>
             <p>A responsive registration form with validation to collect user details.</p>
-            <iframe src="https://mallabhavya21.github.io/techforgirls/" 
-                    width="100%" height="300px" style="border:1px solid #ddd; border-radius:8px;"></iframe>
+            <iframe src="https://mallabhavya21.github.io/techforgirls/" width="100%" height="300px" style="border:1px solid #ddd; border-radius:8px;"></iframe>
             <a href="https://mallabhavya21.github.io/techforgirls/" target="_blank">Open in Fullscreen</a>
         </div>
     </div>
 
-    <!-- Future Projects -->
     <h3 style="text-align:center; margin-top:2rem;">Future Project Ideas</h3>
     <div class="projects-grid">
         <div class="project-card">
@@ -102,34 +104,16 @@
     <button onclick="backToWelcome()">Back</button>
 </section>
 
-<!-- Skills Section -->
+<!-- Skills Section (Circular Graphs) -->
 <section id="skills" class="section">
     <h2>Skills</h2>
     <div class="skills-container">
-        <div class="skill">
-            <p>HTML</p>
-            <div class="progress"><div class="progress-bar html" data-width="95%">95%</div></div>
-        </div>
-        <div class="skill">
-            <p>CSS</p>
-            <div class="progress"><div class="progress-bar css" data-width="90%">90%</div></div>
-        </div>
-        <div class="skill">
-            <p>JavaScript</p>
-            <div class="progress"><div class="progress-bar js" data-width="80%">80%</div></div>
-        </div>
-        <div class="skill">
-            <p>Database</p>
-            <div class="progress"><div class="progress-bar db" data-width="70%">70%</div></div>
-        </div>
-        <div class="skill">
-            <p>Node.js</p>
-            <div class="progress"><div class="progress-bar node" data-width="65%">65%</div></div>
-        </div>
-        <div class="skill">
-            <p>React</p>
-            <div class="progress"><div class="progress-bar react" data-width="75%">75%</div></div>
-        </div>
+        <div class="skill-circle" data-skill="HTML" data-percent="95"></div>
+        <div class="skill-circle" data-skill="CSS" data-percent="90"></div>
+        <div class="skill-circle" data-skill="JavaScript" data-percent="80"></div>
+        <div class="skill-circle" data-skill="Database" data-percent="70"></div>
+        <div class="skill-circle" data-skill="Node.js" data-percent="65"></div>
+        <div class="skill-circle" data-skill="React" data-percent="75"></div>
     </div>
     <button onclick="backToWelcome()">Back</button>
 </section>
