--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mallababla Portfolio</title>
+<title>Malla Bhavya Portfolio</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- Header -->
 <header>
-    <h1>Mallababla</h1>
+    <h1>Malla Bhavya</h1>
 </header>
 
 <!-- Navigation -->
