--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Malla Bhavya</h1>
 </header>
 
-<!-- Navigation -->
+<!-- Navigation Buttons Side by Side -->
 <nav>
     <ul>
         <li><a href="#about">About</a></li>
@@ -27,8 +27,8 @@
 <section id="about">
     <h2>About Me</h2>
     <p>Hello! I'm Bhavya, a B.Tech 3rd-year student passionate about frontend development and Python. 
-    I love building interactive and responsive web applications. 
-    My goal is to become a professional frontend developer. This portfolio showcases my projects and skills.</p>
+    I love building interactive and responsive web applications. My goal is to become a professional frontend developer. 
+    This portfolio showcases my projects and skills.</p>
 </section>
 
 <!-- Skills Section -->
