--- a/index.html
+++ b/index.html
@@ -8,20 +8,18 @@
 </head>
 <body>
 
-<!-- Header -->
-<header>
+<!-- Centered Header and Navigation -->
+<header class="center-header">
     <h1>Malla Bhavya</h1>
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 </header>
-
-<!-- Navigation Buttons Side by Side -->
-<nav>
-    <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</nav>
 
 <!-- About Section -->
 <section id="about">
