--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 </head>
 <body>
 
-<!-- Centered Header and Navigation -->
-<header class="center-header">
-    <h1>Malla Bhavya</h1>
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+<!-- Landing Section -->
+<section class="landing">
+    <div class="landing-content">
+        <h1>Malla Bhavya</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</section>
 
 <!-- About Section -->
 <section id="about">
