--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <!-- Landing Section -->
 <section class="landing">
     <div class="landing-content">
-        <h1>Malla Bhavya</h1>
-        <nav>
+        <h1 class="fade-in">Malla Bhavya</h1>
+        <nav class="fade-in delay1">
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -24,7 +24,7 @@
 </section>
 
 <!-- About Section -->
-<section id="about">
+<section id="about" class="fade-section">
     <h2>About Me</h2>
     <p>Hello! I'm Bhavya, a B.Tech 3rd-year student passionate about frontend development and Python. 
     I love building interactive and responsive web applications. My goal is to become a professional frontend developer. 
@@ -32,7 +32,7 @@
 </section>
 
 <!-- Skills Section -->
-<section id="skills">
+<section id="skills" class="fade-section">
     <h2>Skills</h2>
     <div class="skills-container">
         <div class="skill-circle" data-skill="HTML" data-percent="95" style="--color:#e44d26;"></div>
@@ -45,7 +45,7 @@
 </section>
 
 <!-- Projects Section -->
-<section id="projects">
+<section id="projects" class="fade-section">
     <h2>Projects</h2>
     <div class="projects-grid">
         <div class="project-card">
@@ -72,7 +72,7 @@
 </section>
 
 <!-- Contact Section -->
-<section id="contact">
+<section id="contact" class="fade-section">
     <h2>Contact Me</h2>
     <form>
         <input type="text" placeholder="Your Name" required>
