--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <!-- Landing Section -->
 <section class="landing">
     <div class="landing-content">
-        <h1 class="fade-in">Malla Bhavya</h1>
-        <nav class="fade-in delay1">
+        <h1>Malla Bhavya</h1>
+        <p class="titles">Web Developer | Python Programmer</p>
+        <nav>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
