--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <!-- Landing Section -->
 <section class="landing">
     <div class="landing-content">
-        <h1>Malla Bhavya</h1>
-        <p class="titles">Web Developer | Python Programmer</p>
+        <h1 class="name">Malla Bhavya</h1>
+        <p class="titles">
+            <span class="title">Web Developer</span> | 
+            <span class="title">Python Programmer</span>
+        </p>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
