--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </section>
 
 <!-- About Section -->
-<section id="about" class="fade-section">
+<section id="about">
     <h2>About Me</h2>
     <p>Hello! I'm Bhavya, a B.Tech 3rd-year student passionate about frontend development and Python. 
     I love building interactive and responsive web applications. My goal is to become a professional frontend developer. 
@@ -36,7 +36,7 @@
 </section>
 
 <!-- Skills Section -->
-<section id="skills" class="fade-section">
+<section id="skills">
     <h2>Skills</h2>
     <div class="skills-container">
         <div class="skill-circle" data-skill="HTML" data-percent="95" style="--color:#e44d26;"></div>
@@ -49,7 +49,7 @@
 </section>
 
 <!-- Projects Section -->
-<section id="projects" class="fade-section">
+<section id="projects">
     <h2>Projects</h2>
     <div class="projects-grid">
         <div class="project-card">
@@ -76,7 +76,7 @@
 </section>
 
 <!-- Contact Section -->
-<section id="contact" class="fade-section">
+<section id="contact">
     <h2>Contact Me</h2>
     <form>
         <input type="text" placeholder="Your Name" required>
